# Base_MyGauss

./: .gitignore  CMakeLists.txt
source/: CMakeLists.txt  Gauss.h  Gauss_1d.cpp  Gauss_2d.cpp  Gauss_2d_triangle.cpp
